fixed another nav-path layout issue

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -254,6 +254,7 @@ nav {
 #nav-path {
   list-style: none;
   margin: 0;
+  padding: 0;
   li {
     display: inline-block;
     &:after {
